# nostrdome

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  changelog.md  contact_list_acc_3.json  events.json  test_ct.json
.github/workflows/: build.yml
assets/: nips.md
migrations/: 10_subscribed_channel.sql  1_setup.sql  2_event.sql  3_relay.sql  4_tag.sql  5_contact.sql  6_message.sql  7_event_timestamp.sql  7_user_config.sql  8_relay_response.sql  9_channel.sql  9_channel_message.sql
migrations/cache/: 1_setup.sql  2_cache_history.sql  2_profile_meta_cache.sql  3_channel_cache.sql  4_image_cache.sql  5_channel_member_map.sql
src/: app.rs  color.json  config.rs  consts.rs  crypto.rs  error.rs  icon.rs  lib.rs  main.rs  ntp.rs  style.rs  utils.rs  widget.rs
src/components/: async_file_importer.rs  card.rs  chat_card.rs  chat_contact.rs  chat_list_container.rs  chat_view.rs  common_scrollable.rs  contact_card.rs  contact_list.rs  contact_row.rs  copy_btn.rs  file_importer.rs  mod.rs  relay_row.rs  scrollables.rs  status_bar.rs  text_input_group.rs
src/components/custom_widgets/: context_menu.rs  floating_element.rs  mod.rs  modal.rs  mouse_area.rs  responsive.rs
src/components/text/: mod.rs  title.rs
src/db/: cache.rs  channel.rs  channel_cache.rs  channel_message.rs  channel_subscription.rs  contact.rs  database.rs  event.rs  image_cache.rs  message.rs  mod.rs  profile_cache.rs  relay.rs  relay_response.rs  user.rs  user_config.rs
src/net/: accs.txt  back_channel.rs  backend_event.rs  client.rs  contact.rs  database.rs  event.rs  filters.rs  list_events.rs  logic.rs  messages.rs  mod.rs  new.rs  nostr.rs  nostr_client.rs  nostr_events.rs  ntp.rs  relay.rs  reqwest_client.rs
src/net/backend/: back_channel.rs  backend_event.rs  input.rs  mod.rs  state.rs  to_backend.rs
src/net/deprecated/: database.rs  nostr_client.rs
src/net/deprecated/events/: database.rs  nostr.rs
src/net/events/: backend.rs  frontend.rs  mod.rs  nostr.rs
src/net/kind/: contact_list.rs  dm.rs  idea.rs  mod.rs
src/net/operations/: builder.rs  cache.rs  contact.rs  contact_list.rs  direct_message.rs  download.rs  event.rs  metadata.rs  mod.rs  relay.rs  subscribe.rs
src/style/: button.rs  card.rs  checkbox.rs  container.rs  mod.rs  modal.rs  old_pallete.rs  palette.rs  pallete.rs  radio.rs  scrollable.rs  slider.rs  split.rs  text.rs  text_input.rs
src/types/: backend_state.rs  channel_metadata.rs  channel_result.rs  chat_message.rs  db_relay.rs  event.rs  mod.rs  relay_url.rs  subscription_type.rs
src/views/: channel.rs  channels.rs  chat.rs  color_palettes.rs  find_channels.rs  home.rs  login.rs  logout.rs  mod.rs  route.rs  settings.rs  slider_styling.rs  theme_styling.rs  welcome.rs
src/views/modal/: basic_contact.rs  import_contact_list.rs  mod.rs  profile_view.rs  relay_basic.rs  relay_document.rs  relays_confirmation.rs  send_contact_list.rs
src/views/settings/: about.rs  account.rs  appearance.rs  backup.rs  contacts.rs  mod.rs  network.rs
tests/: event.rs  helpers.rs  main.rs  relay.rs
tests/common/: events.rs
tests/kind/: contact_list.rs  contact_list_helpers.rs  dm.rs  dm_helpers.rs  helpers.rs  mod.rs  received_channel_creation.rs  received_channel_metadata.rs  received_channel_msg.rs  received_contact_list.rs  received_dm.rs  sent_channel_msg.rs  sent_contact_list.rs  sent_dm.rs
