[package]
name = "nostrdome"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
chrono = { version="0.4.22", features=["serde"] }
csv = "1.1.3"
directories = "5.0.0"
futures = "0.3.21"
iced = { version="0.9.0", features = ["tokio", "debug"] }
iced_style = "0.8.0"
iced_native = { version="0.10.1" }
iced_lazy = { version="0.6.1" }
iced_aw = { version="0.5.0", features = ["split", "modal", "spinner"] }
nostr-sdk = {version = "0.21.0", features = ["all-nips"]}
num-format = "0.4.3"
rand = "0.8.5"
serde = { version="1.0.145", features=["derive"] }
serde_json = "1.0.68"
reqwest = "0.11.16"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.12"
async-stream = "0.3.5"
uuid = { version = "1.2.1", features = ["v4"] }
thiserror = "1.0"
url = "2.3.1"
fake = { version = "2.5", features=['derive']}
regex = "1.7.3"
sqlx = { version="0.6.3", features = ["sqlite", "runtime-tokio-native-tls"] }
log = "0.4.17"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [ "std", "env-filter" ] }
rfd = "0.11.3"
base64 = "0.21.0"
aes-gcm = "0.10.1"
once_cell = "1.17.1"
unicode-segmentation = "1.8.0"
async-trait = "0.1.68"